added .aar compatible with .dex
Signed-off-by: sachin.sp <sachin.sp@cyberpwn.com>