@@ -8,6 +8,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.Locale;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
@@ -21,7 +22,7 @@ public class BioSDKLoader {
 
     private static final String TAG = BioSDKLoader.class.getSimpleName();
     private static final String ASSETS_FOLDER = "biosdk";
-    private static final String AAR_CLASSES_JAR = "classes.jar";
+    private static final String DEX_ENTRY_NAME = "classes.dex";
 
     public static IBioApiV2 loadBioSDK(Context context, Modality modality, GlobalParamRepository globalParamRepository) {
         try {
@@ -44,36 +45,27 @@ public class BioSDKLoader {
 
             File sdkFile = findAnySdkFromAssets(context);
             if (sdkFile == null) {
-                Log.w(TAG, "No SDK .jar/.aar found in assets for modality: " + modalityKey);
+                Log.w(TAG, "No runtime-loadable SDK (.dex or DEX-jar) found in assets for modality: " + modalityKey);
                 return null;
             }
 
-            // Validate file exists and is readable
             if (!sdkFile.exists() || !sdkFile.canRead()) {
                 Log.e(TAG, "SDK file is not accessible: " + sdkFile.getAbsolutePath());
                 return null;
             }
 
-            // Check if file is a valid DEX/JAR
             if (sdkFile.length() == 0) {
                 Log.e(TAG, "SDK file is empty: " + sdkFile.getAbsolutePath());
                 return null;
             }
 
-            // Validate that the file is a DEX-compatible file
             if (!isDexFile(sdkFile)) {
                 String fileName = sdkFile.getName();
                 String errorMsg = "SDK file is not a valid DEX file: " + sdkFile.getAbsolutePath() + 
                     ". The file appears to be a regular JAR with .class files (Java bytecode). " +
                     "Android runtime requires DEX format (classes.dex). ";
                 
-                if (fileName.contains("-classes.jar") || fileName.endsWith(".aar")) {
-                    errorMsg += "NOTE: AAR files and their extracted classes.jar are not suitable for runtime loading. " +
-                        "AARs are designed for compile-time inclusion. For runtime loading, the SDK must be provided " +
-                        "as a DEX-compatible JAR file (containing classes.dex) instead of an AAR.";
-                } else {
-                    errorMsg += "Please ensure the SDK is compiled for Android and contains DEX format.";
-                }
+                errorMsg += "Please provide a DEX-compatible SDK (a .dex file or a .jar/.apk/.zip containing classes.dex).";
                 
                 Log.e(TAG, errorMsg);
                 return null;
@@ -89,7 +81,7 @@ public class BioSDKLoader {
 
                 try {
                     Class<?> sdkClass = classLoader.loadClass(className);
-                    Object sdkInstance = sdkClass.newInstance();
+                    Object sdkInstance = sdkClass.getDeclaredConstructor().newInstance();
                     if (sdkInstance instanceof IBioApiV2) {
                         Log.i(TAG, "Successfully loaded BioSDK: " + className + " for modality: " + modalityKey);
                         return (IBioApiV2) sdkInstance;
@@ -98,13 +90,12 @@ public class BioSDKLoader {
                 } catch (ClassNotFoundException e) {
                     Log.e(TAG, "Class not found in SDK: " + className + ". File: " + sdkFile.getName() + 
                         ". Make sure the SDK file contains the class and is a valid DEX file.", e);
-                } catch (Exception e) {
+                } catch (ReflectiveOperationException e) {
                     Log.e(TAG, "Failed to load class from SDK: " + className + ". File: " + sdkFile.getName(), e);
                 }
             } catch (Exception e) {
                 Log.e(TAG, "Failed to create DexClassLoader for file: " + sdkFile.getAbsolutePath() + 
                     ". The file may not be a valid DEX file. Error: " + e.getMessage(), e);
-                // If it's a DEX loading error, suggest checking the file format
                 if (e.getMessage() != null && e.getMessage().contains("classes.dex")) {
                     Log.e(TAG, "The SDK file appears to be a regular JAR (with .class files) rather than a DEX file. " +
                         "Android requires DEX format. Please ensure the SDK is properly compiled for Android.");
@@ -151,30 +142,40 @@ public class BioSDKLoader {
                 return null;
             }
 
-            // Priority 1: Look for DEX-compatible JAR files first (these work for runtime loading)
+            // Priority 1: raw .dex files (directly loadable)
             for (String name : files) {
                 String lower = name.toLowerCase(Locale.ROOT);
-                if (lower.endsWith(".jar")) {
-                    File jarFile = copyFileFromAssets(context, name);
-                    if (jarFile != null) {
-                        Log.d(TAG, "Found JAR file in assets: " + name);
-                        return jarFile;
+                if (lower.endsWith(".dex")) {
+                    File dexFile = copyFileFromAssets(context, folder, name);
+                    if (dexFile != null && isDexFile(dexFile)) {
+                        Log.d(TAG, "Found DEX file in assets: " + name);
+                        return dexFile;
                     }
                 }
             }
 
-            // Priority 2: Look for AAR files (extract classes.jar, but note: may not be DEX-compatible)
+            // Priority 2: JAR/APK/ZIP that already contains classes.dex (DEX-jar)
+            for (String name : files) {
+                String lower = name.toLowerCase(Locale.ROOT);
+                if (lower.endsWith(".jar") || lower.endsWith(".apk") || lower.endsWith(".zip")) {
+                    File container = copyFileFromAssets(context, folder, name);
+                    if (container != null && isDexFile(container)) {
+                        Log.d(TAG, "Found DEX container in assets: " + name);
+                        return container;
+                    }
+                }
+            }
+
+            // Priority 3: AAR only if it already contains classes.dex (rare)
             for (String name : files) {
                 String lower = name.toLowerCase(Locale.ROOT);
                 if (lower.endsWith(".aar")) {
-                    Log.d(TAG, "Found AAR file in assets: " + name + ". Extracting classes.jar...");
-                    File aarFile = copyFileFromAssets(context, name);
+                    File aarFile = copyFileFromAssets(context, folder, name);
                     if (aarFile != null) {
-                        File extractedJar = extractClassesJarFromAar(context, aarFile);
-                        if (extractedJar != null) {
-                            Log.w(TAG, "Extracted classes.jar from AAR. WARNING: AAR files contain regular JARs " +
-                                "with .class files, not DEX format. For runtime loading, use DEX-compatible JAR files instead.");
-                            return extractedJar;
+                        File extractedDex = extractDexFromAarIfPresent(context, aarFile);
+                        if (extractedDex != null && isDexFile(extractedDex)) {
+                            Log.d(TAG, "Extracted classes.dex from AAR: " + name);
+                            return extractedDex;
                         }
                     }
                 }
@@ -185,8 +186,7 @@ public class BioSDKLoader {
         return null;
     }
 
-    private static File extractClassesJarFromAar(Context context, File aarFile) {
-        File outputJarFile = null;
+    private static File extractDexFromAarIfPresent(Context context, File aarFile) {
         ZipFile zipFile = null;
         InputStream inputStream = null;
         FileOutputStream outputStream = null;
@@ -199,72 +199,29 @@ public class BioSDKLoader {
             }
 
             zipFile = new ZipFile(aarFile);
-            
-            // First, check if AAR contains a pre-compiled DEX file (unlikely but possible)
-            ZipEntry dexEntry = zipFile.getEntry("classes.dex");
-            if (dexEntry != null) {
-                String extractedDexName = aarFile.getName().replace(".aar", ".dex");
-                File outputDexFile = new File(biosdkDir, extractedDexName);
-                if (outputDexFile.exists() && outputDexFile.length() > 0) {
-                    return outputDexFile;
-                }
-                
-                inputStream = zipFile.getInputStream(dexEntry);
-                outputStream = new FileOutputStream(outputDexFile);
-                byte[] buffer = new byte[8192];
-                int bytesRead;
-                while ((bytesRead = inputStream.read(buffer)) != -1) {
-                    outputStream.write(buffer, 0, bytesRead);
-                }
-                outputStream.flush();
-                outputStream.close();
-                inputStream.close();
-                Log.i(TAG, "Extracted DEX file from AAR: " + extractedDexName);
-                return outputDexFile;
-            }
-
-            // AAR files contain classes.jar with .class files (Java bytecode), not DEX format
-            // For runtime loading, Android requires DEX format. AARs are meant for compile-time inclusion.
-            // We'll extract it but it won't work with DexClassLoader - it needs to be converted to DEX.
-            String extractedJarName = aarFile.getName().replace(".aar", "-classes.jar");
-            outputJarFile = new File(biosdkDir, extractedJarName);
-
-            if (outputJarFile.exists() && outputJarFile.length() > 0) {
-                // File already extracted, but it's still a regular JAR, not DEX
-                Log.w(TAG, "Using extracted classes.jar from AAR. Note: AAR files contain regular JARs " +
-                    "with .class files, not DEX format. For runtime loading, the SDK should be provided " +
-                    "as a DEX-compatible JAR file instead of an AAR.");
-                return outputJarFile;
-            }
-
-            ZipEntry classesJarEntry = zipFile.getEntry(AAR_CLASSES_JAR);
-            if (classesJarEntry == null) {
-                Log.e(TAG, "classes.jar not found in AAR: " + aarFile.getName());
+            ZipEntry dexEntry = zipFile.getEntry(DEX_ENTRY_NAME);
+            if (dexEntry == null) {
                 return null;
             }
 
-            inputStream = zipFile.getInputStream(classesJarEntry);
-            outputStream = new FileOutputStream(outputJarFile);
-            
+            String extractedDexName = aarFile.getName().replace(".aar", ".dex");
+            File outputDexFile = new File(biosdkDir, extractedDexName);
+            if (outputDexFile.exists() && outputDexFile.length() > 0) {
+                return outputDexFile;
+            }
+
+            inputStream = zipFile.getInputStream(dexEntry);
+            outputStream = new FileOutputStream(outputDexFile);
             byte[] buffer = new byte[8192];
             int bytesRead;
             while ((bytesRead = inputStream.read(buffer)) != -1) {
                 outputStream.write(buffer, 0, bytesRead);
             }
             outputStream.flush();
-
-            Log.w(TAG, "Extracted classes.jar from AAR. IMPORTANT: AAR files are not suitable for runtime loading. " +
-                "The extracted JAR contains .class files (Java bytecode), but Android runtime requires DEX format. " +
-                "For runtime loading, the SDK should be provided as a DEX-compatible JAR file (containing classes.dex) " +
-                "instead of an AAR file. AARs are designed for compile-time inclusion in Android projects.");
-
-            return outputJarFile;
+            return outputDexFile;
 
         } catch (IOException e) {
-            Log.e(TAG, "Failed to extract classes.jar from AAR: " + aarFile.getName(), e);
-            if (outputJarFile != null && outputJarFile.exists()) {
-                outputJarFile.delete();
-            }
+            Log.e(TAG, "Failed to extract classes.dex from AAR: " + aarFile.getName(), e);
             return null;
         } finally {
             try {
@@ -277,7 +234,7 @@ public class BioSDKLoader {
         }
     }
 
-    private static File copyFileFromAssets(Context context, String fileName) {
+    private static File copyFileFromAssets(Context context, String folder, String fileName) {
         File outputFile = null;
         InputStream inputStream = null;
         FileOutputStream outputStream = null;
@@ -294,14 +251,15 @@ public class BioSDKLoader {
                 return outputFile;
             }
 
-            String assetPath = ASSETS_FOLDER + "/" + fileName;
+            String assetPath = folder == null || folder.isEmpty() ? fileName : (folder + "/" + fileName);
             try {
                 inputStream = context.getAssets().open(assetPath);
             } catch (IOException e) {
+                // Backward compatible fallback: some callers may still pass only fileName.
                 try {
                     inputStream = context.getAssets().open(fileName);
                 } catch (IOException e2) {
-                    Log.w(TAG, "File not found in assets: " + fileName);
+                    Log.w(TAG, "File not found in assets: " + assetPath);
                     return null;
                 }
             }
@@ -345,20 +303,19 @@ public class BioSDKLoader {
         }
 
         try {
-            // First check if it's a JAR/ZIP containing classes.dex
+            // First check if it's a JAR/APK/ZIP containing classes.dex
             try (ZipFile zipFile = new ZipFile(file)) {
-                ZipEntry dexEntry = zipFile.getEntry("classes.dex");
+                ZipEntry dexEntry = zipFile.getEntry(DEX_ENTRY_NAME);
                 if (dexEntry != null) {
                     return true;
                 }
-                // It's a ZIP but doesn't contain classes.dex - not a valid DEX file
                 return false;
             } catch (java.util.zip.ZipException e) {
                 // Not a ZIP file, check if it's a direct DEX file
                 try (java.io.FileInputStream fis = new java.io.FileInputStream(file)) {
                     byte[] magic = new byte[4];
                     if (fis.read(magic) == 4) {
-                        String magicString = new String(magic);
+                        String magicString = new String(magic, StandardCharsets.US_ASCII);
                         return "dex\n".equals(magicString);
                     }
                 }
